# multimana

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run.bat
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: ModLoaderInfo.ini
generator/: Cargo.toml
generator/src/: generation.rs  lib.rs  model.rs  serialization.rs
manasdk/: Cargo.toml  build.rs
manasdk-macros/: Cargo.toml
manasdk-macros/src/: lib.rs
manasdk/dump/: ClassesInfo.json  EnumsInfo.json  FunctionsInfo.json  OffsetsInfo.json  StructsInfo.json
manasdk/src/: collections.rs  enums.rs  fields.rs  functions.rs  lib.rs  strings.rs
manasdk/src/overrides/: core_u_object.rs  engine.rs  input_core.rs  mod.rs
multiplayer/: Cargo.toml
multiplayer/src/: lib.rs
scripts/: bootstrap.py
scripts/modding/: __init__.py  battle_area_handling.py  change_target_handling.py  contextual_player_controller.py  damage_handling.py  enemy_handling.py  ring_menu_handling.py  utils.py
src/: console.rs  lib.rs  main.rs  setup.rs  statics.rs  utils.rs
src/gui/: app.rs  mod.rs  python_console.rs  tracer_window.rs
src/multiplayer/: control_manager.rs  input_manager.rs  mod.rs  player_handler.rs
src/python_interpreter/: bindings.rs  mod.rs
src/tracer/: kismet_tracing.rs  mod.rs  to_string.rs
