[package]
name = "multimana"
version = "0.1.0"
edition = "2021"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manasdk = { path = "manasdk" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
tracing-appender = "0.2"
windows-sys = { version = "0.59.0", features = ["Win32", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_SystemServices"] }
nu-ansi-term = "0.50.1"
libmem = "5.0.1"
anyhow = "1.0.86"
lazy_static = "1.5.0"
tracing-chrome = "0.7.2"
eframe = { version = "0.28.1", features = ["default_fonts", "persistence"] }
serde = { version = "1.0.204", features = ["derive"] }
winit = "0.29.15"
concurrent-queue = "2.5.0"
either = "1.13.0"
flagset = "0.4.6"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["generator", "manasdk", "manasdk-macros"]
