[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.6"
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
quote = "1.0"
heck = "0.5.0"
proc-macro2 = "1.0.86"
rust-format = { version = "0.3.4", features = ["pretty_please"] }
syn = "2.0.72"

