[package]
name = "manasdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
heck = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.6"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
regex = "1.10.6"
widestring = "1.1.0"
